[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/level2.gd" type="Script" id=1]
[ext_resource path="res://tiles/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/Enemy1.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/Clawer.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12.4085, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 12.4085, 10 )

[node name="Level" type="Node2D" index="0"]

[node name="TileMapContainer" type="Node2D" parent="." index="0"]

script = ExtResource( 1 )

[node name="VictoryTileMap" type="TileMap" parent="TileMapContainer" index="0"]

z_index = -100
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 48 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327686, 2, 0, 327689, 1, 0 )
_sections_unfolded = [ "Cell", "Visibility", "Z Index" ]

[node name="WhiteTileMap" type="TileMap" parent="TileMapContainer" index="1"]

z_index = -51
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 48 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 7, 3, 0, 8, 4, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0 )
_sections_unfolded = [ "Cell", "Visibility", "Z Index" ]

[node name="HintTileMap" type="TileMap" parent="TileMapContainer" index="2"]

modulate = Color( 1, 1, 1, 0.723765 )
z_index = -50
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 48 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 7, 3, 0, 8, 4, 0 )
_sections_unfolded = [ "Cell", "Visibility", "Z Index" ]

[node name="ActiveTileMap" type="TileMap" parent="TileMapContainer" index="3"]

z_index = -49
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 48 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 7, 3, 0, 8, 4, 0 )
_sections_unfolded = [ "Cell", "Transform", "Visibility", "Z Index" ]

[node name="Area2D" type="Area2D" parent="TileMapContainer" index="4"]

position = Vector2( 480, -122 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 1024
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMapContainer/Area2D" index="0"]

position = Vector2( 31.2626, 149.933 )
scale = Vector2( 6.92605, 1 )
shape = SubResource( 1 )

[node name="Characters" type="Node2D" parent="." index="1"]

[node name="KinematicBody2D" parent="Characters" index="0" instance=ExtResource( 3 )]

position = Vector2( 507.056, 321.667 )

[node name="Walls" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="NorthWall" type="StaticBody2D" parent="Walls" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/NorthWall" index="0"]

position = Vector2( 199.723, 14.1499 )
scale = Vector2( 19.9706, 3.3795 )
shape = SubResource( 2 )

[node name="NorthWall2" type="StaticBody2D" parent="Walls" index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/NorthWall2" index="0"]

position = Vector2( 823.518, 14.2671 )
scale = Vector2( 19.9706, 3.3795 )
shape = SubResource( 2 )

[node name="DoorWall" type="StaticBody2D" parent="Walls" index="2"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/DoorWall" index="0"]

position = Vector2( 513.038, 15.5939 )
scale = Vector2( 19.9706, 3.3795 )
shape = SubResource( 2 )

[node name="SouthWall" type="StaticBody2D" parent="Walls" index="3"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/SouthWall" index="0"]

position = Vector2( 538.968, 609.749 )
scale = Vector2( 41.5067, 3.3795 )
shape = SubResource( 2 )

[node name="EastWall" type="StaticBody2D" parent="Walls" index="4"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/EastWall" index="0"]

position = Vector2( 994.138, 300.103 )
scale = Vector2( 2.79182, 27.3767 )
shape = SubResource( 2 )

[node name="WestWall" type="StaticBody2D" parent="Walls" index="5"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WestWall" index="0"]

position = Vector2( 29.7075, 279.558 )
scale = Vector2( 2.79182, 37.1453 )
shape = SubResource( 2 )

[node name="Enemies" type="Node2D" parent="." index="3"]

[node name="KinematicBody2D" parent="Enemies" index="0" instance=ExtResource( 4 )]

position = Vector2( 182, 268 )

[node name="KinematicBody2D2" parent="Enemies" index="1" instance=ExtResource( 5 )]

position = Vector2( 847.961, 481.273 )

[node name="KinematicBody2D3" parent="Enemies" index="2" instance=ExtResource( 5 )]

position = Vector2( 841.822, 325.35 )

[node name="KinematicBody2D4" parent="Enemies" index="3" instance=ExtResource( 5 )]

position = Vector2( 850.416, 143.645 )


